# Incompact3d_MockCompetition

./: README.md
examples/: CMakeLists.txt
examples/Cylinder-wake/: input_DNS300_LR_MOVING.i3d
examples/Periodic-hill/: input_LR_Re1000.i3d
examples/Wind-Turbine/: CMakeLists.txt
examples/Wind-Turbine/NREL-5MW_ALM/: NREL-5MW.i3d  input.i3d
examples/cmake/: X3D_ADD_EXAMPLE.cmake
src/: parameters.f90  tools.f90
